# emas-scraper

./: .gitignore  README.md  analyze_stockbit_sentiment.py  config.json  packages.txt  pyproject.toml  requirements.txt  sentiment_analysis.json  sentiments.csv  streamlit_dashboard.py
.streamlit/: config.toml
src/: stockbit_stream_EMAS.csv
src/emas_scraper/: __init__.py  cli.py  config.py  google_news.py  sentiment_analyzer.py
src/emas_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emas_scraper_stockbit/: README.md  __init__.py  __main__.py  cli.py  config.py  example.py  manual_scraper.py  models.py  requirements.txt  scraper.py  session_scraper.py  start_chrome_debug.bat  stream.html  test_login.py
tests/: __init__.py  test_cli.py  test_config.py  test_google_news.py  test_sentiment_analyzer.py
